--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     </div>
             </div>
         </div>
-        <div class="section-4 border">
+        <div class="section-4">
                 <div class="mt-3 mb-5" id="local-text">
                         <p id="github-link" class="text-center" style="color:#8be9fd"><span class="mr-2"><i class="fab fa-github-alt"></i></span>GITHUB ISSUE HISTORY</p>
                         <p  class="text-center" id="little-line" href="#" style="color:#6272a4">switch to gitlab</p>
